# crowndata-evaluation

./: manage.py  pyproject.toml
crowndata/: asgi.py  settings.py  urls.py  wsgi.py
