[tool.poetry]
name = "crowndata-evaluation"
version = "0.1.0"
description = ""
authors = ["Wei Ji <jiwei0706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
