[tool.poetry]
name = "crowndata-evaluation"
version = "0.1.0"
description = ""
authors = ["Wei Ji <jiwei0706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
